<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.CoKanerockpaperscissor.UI.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/t"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/all_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t" />

    <TextView
        android:id="@+id/tvStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/win_draw_lose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/initial_result"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStats" />

    <ImageView
        android:id="@+id/Computer"
        android:layout_width="140dp"
        android:layout_height="161dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/You"
        android:layout_width="140dp"
        android:layout_height="161dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:background="@color/colorPrimaryDark"
        android:scaleX="-1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/You"
        app:layout_constraintEnd_toStartOf="@+id/You"
        app:layout_constraintStart_toEndOf="@+id/Computer"
        app:layout_constraintTop_toTopOf="@+id/Computer" />

    <ImageButton
        android:id="@+id/Rock"
        android:layout_width="128dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/Paper"
        android:layout_width="128dp"
        android:layout_height="96dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Scissor"
        app:layout_constraintStart_toEndOf="@+id/Rock"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/Scissor"
        android:layout_width="128dp"
        android:layout_height="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/Computer"
        app:layout_constraintStart_toStartOf="@+id/Computer"
        app:layout_constraintTop_toBottomOf="@+id/Computer" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/You"
        app:layout_constraintStart_toStartOf="@+id/You"
        app:layout_constraintTop_toBottomOf="@+id/You" />

</androidx.constraintlayout.widget.ConstraintLayout>